// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prompt-initial should do correct initial message 1`] = `
"#PUBLIC
Hello Participant A and Participant B, I'm your mediator. I'm here to facilitate your discussion and help you both understand each other's points of view better. Remember to listen to each other with empathy and openness. We're here to discuss our differences about indoor and outdoor play preferences. [A](Cat), could you start by explaining why you prefer playing inside? 
#SECRET_A
#SECRET_B
#END"
`;

exports[`prompt-initial should reply private message to private message 1`] = `
"#PUBLIC
#SECRET_A
Of course, [A](Cat). We will continue this in private.
#SECRET_B
#END"
`;

exports[`prompt-initial should reply send messages to both participants 1`] = `
"#PUBLIC
#SECRET_A
Absolutely, [A](Cat). I would ask [B](Dog) about his reasons privately as per your request.
#SECRET_B
[B](Dog), could you please explain your preference for playing outside?
#END"
`;
